ubah_ke_versi_stabil
